BAEL-6254: Fix surefire